# hs-sleuth

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  NOTES.md  README.md  hs-plugin.cabal  make_release.sh
elmfrontend/: elm.json
elmfrontend/src/: CoreLangUtils.elm  Main.elm  MsgTypes.elm  PprCoreLang.elm  State.elm  Trafo.elm  ViewCore.elm  ViewPanel.elm  highlight.min.js  index.html  main.js  pygments.css  style.css
examples/callArityPaperExample/: hs-comprehension-1.html  hs-comprehension-10.html  hs-comprehension-11.html  hs-comprehension-12.html  hs-comprehension-13.html  hs-comprehension-14.html  hs-comprehension-15.html  hs-comprehension-16.html  hs-comprehension-17.html  hs-comprehension-18.html  hs-comprehension-19.html  hs-comprehension-2.html  hs-comprehension-20.html  hs-comprehension-3.html  hs-comprehension-4.html  hs-comprehension-5.html  hs-comprehension-6.html  hs-comprehension-7.html  hs-comprehension-8.html  hs-comprehension-9.html  hs-comprehension-ast-1.html  hs-comprehension-ast-10.html  hs-comprehension-ast-14.html  hs-comprehension-ast-16.html  hs-comprehension-ast-18.html  hs-comprehension-ast-2.html  hs-comprehension-ast-20.html  hs-comprehension-ast-3.html  hs-comprehension-ast-4.html  hs-comprehension-ast-5.html  hs-comprehension-ast-7.html
examples/caseofcase/: hs-comprehension-1.html  hs-comprehension-10.html  hs-comprehension-11.html  hs-comprehension-12.html  hs-comprehension-13.html  hs-comprehension-14.html  hs-comprehension-15.html  hs-comprehension-16.html  hs-comprehension-17.html  hs-comprehension-18.html  hs-comprehension-19.html  hs-comprehension-2.html  hs-comprehension-20.html  hs-comprehension-3.html  hs-comprehension-4.html  hs-comprehension-5.html  hs-comprehension-6.html  hs-comprehension-7.html  hs-comprehension-8.html  hs-comprehension-9.html  hs-comprehension-ast-1.html  hs-comprehension-ast-18.html  hs-comprehension-ast-19.html  (+1 more)
frontend/: elm.json  index.html
generate-elm/: .gitignore  CHANGELOG.md  POSTGEN.md  cabal.project  generate-elm.cabal
generate-elm/app/: Main.hs
generate-elm/src/: MyLib.hs
hs-comprehension/: README.md  cabal.project  hs-comprehension.cabal  output.html  output.txt
hs-comprehension-plugin/: CHANGELOG.md  cabal.project  hs-comprehension-plugin.cabal
hs-comprehension-plugin/plugin/: cabal.project  hs-comprehension-plugin.cabal
hs-comprehension-plugin/plugin/HsComprehension/: Ast.hs  Cvt.hs  Embellish.hs  Hash.hs  Plugin.hs  Uniqify.hs
hs-comprehension-plugin/server/: Main.hs  cabal.project  hs-comprehension-server.cabal
hs-comprehension-plugin/server/HsComprehension/Server/: API.hs  ElmDeriving.hs  ElmDerivingUtils.hs
hs-comprehension-plugin/src/: HsComprehension.hs
hs-comprehension-plugin/src/HsComprehension/: Ast.hs  Cvt.hs  ElmDeriving.hs  Meta.hs  Plugin.hs
hs-comprehension-plugin/src/Server/: Main.hs
hs-comprehension/scripts/: diff.sh  hightlight.py  test.html
hs-comprehension/src/: CoreCollection.hs  CoreLang.hs  Generation.hs  HsComprehension.hs  PlugState.hs  PrettyPrinting.hs  Server.hs  SinkSpan.hs  Uniqify.hs
hs-comprehension/src/CoreLang/: Cvt.hs  Types.hs  Utils.hs
plugin/: cabal.project  hs-comprehension-plugin.cabal
plugin/HsComprehension/: Ast.hs  Cvt.hs  DefAnalysis.hs  Plugin.hs
plugin/lib/HsComprehension/: Ast.hs  Cvt.hs  ElmDeriving.hs  ElmDerivingUtils.hs  Hash.hs  Plugin.hs  Uniqify.hs
plugin/src/: Zip.hs
server/: Dockerfile  Main.hs  cabal.project  hs-comprehension-server.cabal
src/: HsComprehension.hs
test-project/: CHANGELOG.md  README.md  cabal.project  hs-comprehension-1.html  hs-comprehension-10.html  hs-comprehension-11.html  hs-comprehension-12.html  hs-comprehension-13.html  hs-comprehension-14.html  hs-comprehension-15.html  hs-comprehension-16.html  hs-comprehension-17.html  hs-comprehension-18.html  hs-comprehension-19.html  hs-comprehension-2.html  hs-comprehension-20.html  hs-comprehension-3.html  hs-comprehension-4.html  hs-comprehension-5.html  hs-comprehension-6.html  hs-comprehension-7.html  hs-comprehension-8.html  hs-comprehension-9.html  hs-comprehension-ast-11.html  hs-comprehension-ast-13.html  hs-comprehension-ast-16.html  hs-comprehension-ast-19.html  hs-comprehension-ast-6.html  hs-comprehension-ast-8.html  output.json  output.txt  run-server  run-server.py  test-project.cabal
test-project/app/: Factorial.hs  Fusion.hs  HalfMatch.hs  InspectionTests.hs  LargeRecords.hs  Main.hs  Palin.hs  Peano.hs  Quicksort.hs  Records.hs  Streaming.hs  StringSearch.hs  Tail.hs  Text.hs  TextExt.hs  Tree.hs  TreeMap.hs  Typeclass.hs  Unlines.hs
test-project/app/Extra/: Hidden.hs
test-project/dumps/coredump-Baseline/: Channable.hs  Channable.zstd  Factorial.hs  Factorial.zstd  Main.zstd  capture.zstd
test-project/stream-fusion/: GHC_BUILD  LICENSE  README  TODO  setup-base.sh  stream-fusion.cabal
test-project/stream-fusion/Control/Monad/: Stream.hs
test-project/stream-fusion/Data/: Stream.hs
test-project/stream-fusion/Data/List/: Stream.hs
test-project/stream-fusion/desugar/: Desugar.hs  Examples.hs
test-project/stream-fusion/tests/: FuseTest.hs  Makefile
test-project/stream-fusion/tests/Bench/: Fusion.hs  ListVsBase.hs  StreamList.hs  StreamVsList.hs  Utils.hs
test-project/stream-fusion/tests/Examples/: ConcatMap.hs  Enum.hs  Sum.hs  SumReplicate.hs
test-project/stream-fusion/tests/Properties/: Internal.hs  ListVsBase.hs  ListVsSpec.hs  StreamListVsBase.hs  StreamListVsSpec.hs  StreamVsSpecStream.hs  Utils.hs
test-project/stream-fusion/tests/Properties/Monomorphic/: Base.hs  List.hs  Spec.hs  SpecStream.hs  Stream.hs  StreamList.hs
test-project/stream-fusion/tests/Spec/: List.hs  ListExts.hs  PreludeList.hs
test-project/stream-fusion/tests/Strictness/: BaseVsSpec.hs  ListVsBase.hs  ListVsSpec.hs  StreamListVsList.hs  Utils.hs
test-project/stream-fusion/tests/Strictness/Monomorphic/: Base.hs  List.hs  Spec.hs  StreamList.hs
test-project/stream-fusion/tests/Test/SmallCheck/: Partial.hs
unlines-test/: CHANGELOG.md  new.txt  ref.txt  unlines-test.cabal
unlines-test/app/: Main.hs  Unlines.hs
(+256 files in other folders)
