cabal-version:      2.4
name:               generate-elm
version:            0.1.0.0
synopsis:
-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                    , hs-comprehension-plugin
                    , generics-sop
                    , aeson
                    , haskell-to-elm
                    , elm-syntax
                    , bytestring
                    , text
                    , unordered-containers
                    , MissingH
    hs-source-dirs:   src
    default-language: Haskell2010

executable generate-elm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        generate-elm

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite generate-elm-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.0.0
