cabal-version:      2.4
name:               hs-comprehension-plugin
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HsComprehension.Plugin
                    , HsComprehension.Ast
                    , HsComprehension.Meta

    -- Modules included in this library but not exported.
    other-modules:    HsComprehension.ElmDeriving

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                    , ghc
                    , ghc-prim
                    , ghc-dump-core
                    , ghc-dump-util
                    , text
                    , bytestring
                    , aeson
                    , aeson-pretty
                    , generics-sop
                    , haskell-to-elm
                    , elm-syntax
                    , bound
                    , filepath
                    , directory
                    , serialise
                    , zstd
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable hs-comprehension-server
    main-is:          Main.hs

    build-depends:    base ^>=4.16.0.0
                    , hs-comprehension-plugin
                    , wai
                    , warp
                    , http-types
                    , text
                    , bytestring
                    , serialise
                    , aeson
                    , aeson-pretty

    hs-source-dirs:   src/Server
    default-language: Haskell2010
