cabal-version:      3.6
name:               hs-comprehension
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HsComprehension
                    , CoreCollection

    -- Modules included in this library but not exported.
    other-modules:  CoreLang.Types
                  , CoreLang.Cvt
                  , Uniqify
                  , SinkSpan
                  , Server
                  , PlugState

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16
                    , containers
                    , ghc
                    , ghc-prim
                    , mtl
                    , temporary
                    , bytestring
                    , string-interpolate
                    , process
                    , blaze-html
                    , text
                    , filepath
                    , wai
                    , warp
                    , http-types
                    , elm-street
                    , aeson
                    , aeson-pretty
                    , random
                    , hashable
    hs-source-dirs:   src
    default-language: Haskell2010
