cabal-version:      2.4
name:               hs-comprehension-plugin
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HsComprehension.Plugin
                    , HsComprehension.Ast
                    , HsComprehension.Cvt
                    , HsComprehension.Uniqify
                    , HsComprehension.DefAnalysis
                    , HsComprehension.Hash
                    , HsComprehension.ElmDerivingUtils
                    , HsComprehension.ElmDeriving

    -- Modules included in this library but not exported.
    other-modules: 


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base <= 4.16.3
                    , ghc
                    , ghc-prim
                    , ghc-dump-core
                    , text
                    , bytestring
                    , filepath
                    , directory
                    , zstd
                    , containers
                    , mtl
                    , random
                    , time
                    , hashable
                    , parsec
                    , parsec3-numbers
                    , transformers
                    , haskell-to-elm
                    , elm-syntax
                    , bound
                    , generics-sop
                    , aeson
                    , process

    hs-source-dirs: lib
    default-language: Haskell2010

executable hs-comprehension-zip
  build-depends:      base <= 4.16.3
                    , hs-comprehension-plugin
                    , zip-archive
                    , bytestring
                    , filepath
                    , directory


  hs-source-dirs: src

  main-is: Zip.hs
  default-language: Haskell2010
