cabal-version:      3.6
name:               test-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hs-plugin-test
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Channable
                    , Factorial
                    , Quicksort
                    , Peano
                    , Tree
                    , InspectionTests
                    , Text
                    , Typeclass

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , hs-comprehension-plugin
--                    , text == 1.2.3.2
                    , text
                    , bytestring
                    , stream-fusion
                    , inspection-testing
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O1 -fplugin HsComprehension.Plugin -fplugin-opt HsComprehension.Plugin:Test -ddump-rule-firings -ddump-ds-preopt
