cabal-version:      2.4
name:               unlines-test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             HugoPeters1024
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable unlines-test
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Unlines
                  

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , criterion
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -dverbose-core2core -dsuppress-all
