cabal-version:      2.4
name:               hs-comprehension-plugin
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Hugo
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HsComprehension.Plugin
                    , HsComprehension.Ast
                    , HsComprehension.Cvt
                    , HsComprehension.Uniqify

    -- Modules included in this library but not exported.
    other-modules: 


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                    , ghc
                    , ghc-prim
                    , ghc-dump-core
                    , text
                    , bytestring
                    , filepath
                    , directory
                    , serialise
                    , zstd
                    , containers
                    , mtl
                    , random
                    , time
                    , hashable
    hs-source-dirs: .
    default-language: Haskell2010
