cabal-version:      2.4
name:               hs-comprehension-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             HugoPeters1024
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HsComprehension.Server.ElmDeriving
                    , HsComprehension.Server.API
                    , HsComprehension.Server.ElmDerivingUtils

    build-depends:    base
                    , hs-comprehension-plugin
                    , wai
                    , wai-extra
                    , http-types
                    , text
                    , bytestring
                    , serialise
                    , aeson
                    , directory
                    , servant
                    , servant-server
                    , generics-sop
                    , haskell-to-elm
                    , elm-syntax
                    , bound

    hs-source-dirs: .
    default-language: Haskell2010


executable hs-comprehension-server
    main-is:          Main.hs

    build-depends:    base
                    , process
                    , hs-comprehension-server
                    , hs-comprehension-plugin
                    , wai
                    , wai-extra
                    , warp
                    , generics-sop
                    , haskell-to-elm
                    , elm-syntax
                    , bound
                    , text
                    , aeson
                    , directory
                    , servant
                    , servant-server
    hs-source-dirs: .
    default-language: Haskell2010



